--- a/res/layout/test_item_view.xml
+++ b/res/layout/test_item_view.xml
@@ -15,7 +15,7 @@
             android:id="@+id/item_summary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/test_item_title_width"
+            android:layout_marginLeft="@dimen/test_item_title_width"
             android:layout_gravity="center_vertical"
             android:textColor="#ff878787"
             android:textSize="@dimen/test_item_text_size"
