--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -5,67 +5,73 @@
     android:layout_height="fill_parent"
     android:background="#ffeaeaea"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <LinearLayout 
-        android:orientation="vertical" 
-        android:layout_width="0dp" 
-        android:layout_height="fill_parent"
-        android:layout_weight="1">    
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#fff5deb2"
-            android:gravity="center"
-            android:text="@string/auto_test_items"
-            android:textColor="#ff000000"
-            android:textStyle="bold"
-            android:textSize="@dimen/test_item_text_size"
-            />    
-        <LinearLayout
-            android:id="@+id/auto_test_container" 
-            android:orientation="vertical" 
-            android:layout_width="fill_parent" 
-            android:layout_height="wrap_content"
-            android:paddingLeft="20dp">
-        </LinearLayout>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#fff5deb2"
-            android:gravity="center"
-            android:text="@string/manual_test_items"
-            android:textColor="#ff000000"
-            android:textStyle="bold"
-            android:textSize="@dimen/test_item_text_size"
-            />  
-        <LinearLayout
-            android:id="@+id/manual_test_container" 
-            android:orientation="vertical" 
-            android:layout_width="fill_parent" 
-            android:layout_height="wrap_content"
-            android:paddingLeft="20dp">
-        </LinearLayout>
-        <TextView
-            android:id="@+id/misc_test_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#fff5deb2"
-            android:gravity="center"
-            android:text="@string/misc_test_items"
-            android:textColor="#ff000000"
-            android:textStyle="bold"
-            android:textSize="@dimen/test_item_text_size"
-            android:visibility="gone"
-            />  
-        <LinearLayout
-            android:id="@+id/misc_test_container" 
-            android:orientation="horizontal" 
-            android:layout_width="fill_parent" 
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:paddingLeft="20dp">
-        </LinearLayout>
-    </LinearLayout>
-    
+    <ScrollView
+	    android:layout_width="0dp"   
+	    android:layout_height="fill_parent"
+	    android:layout_weight="1" 
+	    android:scrollbars="vertical"    
+	    android:fadingEdge="vertical">
+	    <LinearLayout 
+	        android:orientation="vertical" 
+	        android:layout_width="fill_parent" 
+	        android:layout_height="fill_parent"
+	        android:layout_weight="1">    
+	        <TextView
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:background="#fff5deb2"
+	            android:gravity="center"
+	            android:text="@string/auto_test_items"
+	            android:textColor="#ff000000"
+	            android:textStyle="bold"
+	            android:textSize="@dimen/test_item_text_size"
+	            />    
+	        <LinearLayout
+	            android:id="@+id/auto_test_container" 
+	            android:orientation="vertical" 
+	            android:layout_width="fill_parent" 
+	            android:layout_height="wrap_content"
+	            android:paddingLeft="20dp">
+	        </LinearLayout>
+	        <TextView
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:background="#fff5deb2"
+	            android:gravity="center"
+	            android:text="@string/manual_test_items"
+	            android:textColor="#ff000000"
+	            android:textStyle="bold"
+	            android:textSize="@dimen/test_item_text_size"
+	            />  
+	        <LinearLayout
+	            android:id="@+id/manual_test_container" 
+	            android:orientation="vertical" 
+	            android:layout_width="fill_parent" 
+	            android:layout_height="wrap_content"
+	            android:paddingLeft="20dp">
+	        </LinearLayout>
+	        <TextView
+	            android:id="@+id/misc_test_title"
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:background="#fff5deb2"
+	            android:gravity="center"
+	            android:text="@string/misc_test_items"
+	            android:textColor="#ff000000"
+	            android:textStyle="bold"
+	            android:textSize="@dimen/test_item_text_size"
+	            android:visibility="gone"
+	            />  
+	        <LinearLayout
+	            android:id="@+id/misc_test_container" 
+	            android:orientation="horizontal" 
+	            android:layout_width="fill_parent" 
+	            android:layout_height="wrap_content"
+	            android:visibility="gone"
+	            android:paddingLeft="20dp">
+	        </LinearLayout>
+	    </LinearLayout>
+    </ScrollView> 
     <LinearLayout 
         android:orientation="vertical"
         android:layout_width="0dp" 
