--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="test_item_title_width">140dp</dimen>
+    <dimen name="test_item_title_timer_width">340dp</dimen>
     <dimen name="test_item_text_size">20dp</dimen>
 
 </resources>
