1、修改 通话测试一个节目   2、修改 触摸测试方式

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,168 +1,184 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout 
+
+<FrameLayout 
     android:orientation="horizontal" 
     android:layout_width="fill_parent" 
     android:layout_height="fill_parent"
     android:background="#ffeaeaea"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <ScrollView
-	    android:layout_width="0dp"   
-	    android:layout_height="fill_parent"
-	    android:layout_weight="@integer/main_panel_left_percent" 
-	    android:scrollbars="vertical"    
-	    android:fadingEdge="vertical">
+    
+	<LinearLayout 
+	    android:orientation="horizontal" 
+	    android:layout_width="fill_parent" 
+	    android:layout_height="fill_parent">
+	    <ScrollView
+		    android:layout_width="0dp"   
+		    android:layout_height="fill_parent"
+		    android:layout_weight="@integer/main_panel_left_percent" 
+		    android:scrollbars="vertical"    
+		    android:fadingEdge="vertical">
+		    <LinearLayout 
+		        android:orientation="vertical" 
+		        android:layout_width="fill_parent" 
+		        android:layout_height="fill_parent"
+		        android:layout_weight="1">    
+		        <TextView
+		            android:layout_width="match_parent"
+		            android:layout_height="wrap_content"
+		            android:background="#fff5deb2"
+		            android:gravity="center"
+		            android:text="@string/auto_test_items"
+		            android:textColor="#ff000000"
+		            android:textStyle="bold"
+		            android:textSize="@dimen/test_item_text_size"
+		            />    
+		        <LinearLayout
+		            android:id="@+id/auto_test_container" 
+		            android:orientation="vertical" 
+		            android:layout_width="fill_parent" 
+		            android:layout_height="wrap_content"
+		            android:showDividers="middle"
+		            android:divider="?android:attr/listDivider"
+		            android:paddingLeft="4dp">
+		        </LinearLayout>
+		        <TextView
+		            android:layout_width="match_parent"
+		            android:layout_height="wrap_content"
+		            android:background="#fff5deb2"
+		            android:gravity="center"
+		            android:text="@string/manual_test_items"
+		            android:textColor="#ff000000"
+		            android:textStyle="bold"
+		            android:textSize="@dimen/test_item_text_size"
+		            />  
+		        <LinearLayout
+		            android:id="@+id/manual_test_container" 
+		            android:orientation="vertical" 
+		            android:layout_width="fill_parent" 
+		            android:layout_height="wrap_content"
+		            android:showDividers="middle"
+		            android:divider="?android:attr/listDivider"
+		            android:paddingLeft="4dp">
+		        </LinearLayout>
+		        <TextView
+		            android:id="@+id/misc_test_title"
+		            android:layout_width="match_parent"
+		            android:layout_height="wrap_content"
+		            android:background="#fff5deb2"
+		            android:gravity="center"
+		            android:text="@string/misc_test_items"
+		            android:textColor="#ff000000"
+		            android:textStyle="bold"
+		            android:textSize="@dimen/test_item_text_size"
+		            android:visibility="gone"
+		            />  
+		        <LinearLayout
+		            android:id="@+id/misc_test_container" 
+		            android:orientation="horizontal" 
+		            android:layout_width="fill_parent" 
+		            android:layout_height="wrap_content"
+		            android:visibility="gone"
+		            android:paddingLeft="4dp">
+		        </LinearLayout>
+		    </LinearLayout>
+	    </ScrollView> 
 	    <LinearLayout 
-	        android:orientation="vertical" 
-	        android:layout_width="fill_parent" 
+	        android:orientation="vertical"
+	        android:layout_width="0dp" 
 	        android:layout_height="fill_parent"
-	        android:layout_weight="1">    
-	        <TextView
-	            android:layout_width="match_parent"
-	            android:layout_height="wrap_content"
-	            android:background="#fff5deb2"
-	            android:gravity="center"
-	            android:text="@string/auto_test_items"
-	            android:textColor="#ff000000"
-	            android:textStyle="bold"
-	            android:textSize="@dimen/test_item_text_size"
-	            />    
-	        <LinearLayout
-	            android:id="@+id/auto_test_container" 
-	            android:orientation="vertical" 
+	        android:layout_weight="@integer/main_panel_right_percent">        
+	        <FrameLayout
+	            android:id="@+id/camera_preview_container" 
 	            android:layout_width="fill_parent" 
-	            android:layout_height="wrap_content"
-	            android:paddingLeft="4dp">
+	            android:layout_height="0dp"
+	            android:layout_weight="@integer/main_panel_camera_percent"
+	            android:background="#ff000000">
+	            <SurfaceView 
+	                android:id="@+id/camera_view" 
+	                android:layout_width="fill_parent" 
+	                android:layout_height="fill_parent" />
+	            <TextView
+	                android:id="@+id/camera_text" 
+	                android:layout_width="wrap_content" 
+	                android:layout_height="wrap_content"
+	                android:layout_gravity="bottom"
+	                android:layout_marginBottom="0dp"
+	                android:layout_marginLeft="0dp"
+	                android:background="#80ffffff"
+	                android:textColor="#ff000000"
+	                android:textSize="@dimen/camera_text_size" />
+	        </FrameLayout>
+	        <LinearLayout
+	            android:layout_width="fill_parent" 
+	            android:layout_height="0dp"
+	            android:layout_weight="@integer/main_panel_lcm_percent">
+	            <View
+	                android:layout_width="0dp"
+	                android:layout_height="fill_parent"
+	                android:layout_weight="1"
+	                android:background="#ffff0000"/>
+	            <View
+	                android:layout_width="0dp"
+	                android:layout_height="fill_parent"
+	                android:layout_weight="1"
+	                android:background="#ff00ff00"/>
+	            <View
+	                android:layout_width="0dp"
+	                android:layout_height="fill_parent"
+	                android:layout_weight="1"
+	                android:background="#ff0000ff"/>
+	            <View
+	                android:layout_width="0dp"
+	                android:layout_height="fill_parent"
+	                android:layout_weight="1"
+	                android:background="#ff000000"/>
+	            <View
+	                android:layout_width="0dp"
+	                android:layout_height="fill_parent"
+	                android:layout_weight="1"
+	                android:background="#ffffffff"/>
 	        </LinearLayout>
-	        <TextView
-	            android:layout_width="match_parent"
-	            android:layout_height="wrap_content"
-	            android:background="#fff5deb2"
-	            android:gravity="center"
-	            android:text="@string/manual_test_items"
-	            android:textColor="#ff000000"
-	            android:textStyle="bold"
-	            android:textSize="@dimen/test_item_text_size"
-	            />  
 	        <LinearLayout
-	            android:id="@+id/manual_test_container" 
-	            android:orientation="vertical" 
 	            android:layout_width="fill_parent" 
-	            android:layout_height="wrap_content"
-	            android:paddingLeft="4dp">
-	        </LinearLayout>
-	        <TextView
-	            android:id="@+id/misc_test_title"
-	            android:layout_width="match_parent"
-	            android:layout_height="wrap_content"
-	            android:background="#fff5deb2"
-	            android:gravity="center"
-	            android:text="@string/misc_test_items"
-	            android:textColor="#ff000000"
-	            android:textStyle="bold"
-	            android:textSize="@dimen/test_item_text_size"
-	            android:visibility="gone"
-	            />  
-	        <LinearLayout
-	            android:id="@+id/misc_test_container" 
-	            android:orientation="horizontal" 
-	            android:layout_width="fill_parent" 
-	            android:layout_height="wrap_content"
-	            android:visibility="gone"
-	            android:paddingLeft="4dp">
+	            android:layout_height="0dp"
+	            android:layout_weight="@integer/main_panel_player_percent">
+	            <Button 
+	                android:textSize="@dimen/test_item_text_size" 
+	                android:textStyle="bold" 
+	                android:id="@+id/start_or_stop_record" 
+	                android:layout_width="112.0dip" 
+	                android:layout_height="fill_parent" 
+	                android:layout_marginLeft="-8.0dip" 
+	                android:text="@string/start_record" />
+	            <FrameLayout
+	                android:layout_width="0dp"
+	                android:layout_height="fill_parent"
+	                android:layout_weight="1"
+	                >
+	                <com.ty.actionspcbatest.VUMeter 
+	                    android:id="@+id/vumeter" 
+	                    android:visibility="gone"
+	                    android:layout_width="fill_parent" 
+	                    android:layout_height="fill_parent" />
+	                <com.ty.actionspcbatest.VisualizerFx 
+	                    android:id="@+id/visualizer_fx" 
+	                    android:layout_width="fill_parent" 
+	                    android:layout_height="fill_parent" />
+	                <TextView 
+	                    android:textSize="@dimen/test_item_text_size" 
+	                    android:textColor="@color/blue" 
+	                    android:layout_gravity="center" 
+	                    android:id="@+id/recorder_player_states" 
+	                    android:layout_width="wrap_content" 
+	                    android:layout_height="wrap_content" 
+	                    android:text="@string/playing_music"/>
+	            </FrameLayout>
 	        </LinearLayout>
 	    </LinearLayout>
-    </ScrollView> 
-    <LinearLayout 
-        android:orientation="vertical"
-        android:layout_width="0dp" 
-        android:layout_height="fill_parent"
-        android:layout_weight="@integer/main_panel_right_percent">        
-        <FrameLayout
-            android:id="@+id/camera_preview_container" 
-            android:layout_width="fill_parent" 
-            android:layout_height="0dp"
-            android:layout_weight="@integer/main_panel_camera_percent"
-            android:background="#ff000000">
-            <SurfaceView 
-                android:id="@+id/camera_view" 
-                android:layout_width="fill_parent" 
-                android:layout_height="fill_parent" />
-            <TextView
-                android:id="@+id/camera_text" 
-                android:layout_width="wrap_content" 
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:layout_marginBottom="0dp"
-                android:layout_marginLeft="0dp"
-                android:background="#80ffffff"
-                android:textColor="#ff000000"
-                android:textSize="@dimen/camera_text_size" />
-        </FrameLayout>
-        <LinearLayout
-            android:layout_width="fill_parent" 
-            android:layout_height="0dp"
-            android:layout_weight="@integer/main_panel_lcm_percent">
-            <View
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:background="#ffff0000"/>
-            <View
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:background="#ff00ff00"/>
-            <View
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:background="#ff0000ff"/>
-            <View
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:background="#ff000000"/>
-            <View
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:background="#ffffffff"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="fill_parent" 
-            android:layout_height="0dp"
-            android:layout_weight="@integer/main_panel_player_percent">
-            <Button 
-                android:textSize="@dimen/test_item_text_size" 
-                android:textStyle="bold" 
-                android:id="@+id/start_or_stop_record" 
-                android:layout_width="112.0dip" 
-                android:layout_height="fill_parent" 
-                android:layout_marginLeft="-8.0dip" 
-                android:text="@string/start_record" />
-            <FrameLayout
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                >
-                <com.ty.actionspcbatest.VUMeter 
-                    android:id="@+id/vumeter" 
-                    android:visibility="gone"
-                    android:layout_width="fill_parent" 
-                    android:layout_height="fill_parent" />
-                <com.ty.actionspcbatest.VisualizerFx 
-                    android:id="@+id/visualizer_fx" 
-                    android:layout_width="fill_parent" 
-                    android:layout_height="fill_parent" />
-                <TextView 
-                    android:textSize="@dimen/test_item_text_size" 
-                    android:textColor="@color/blue" 
-                    android:layout_gravity="center" 
-                    android:id="@+id/recorder_player_states" 
-                    android:layout_width="wrap_content" 
-                    android:layout_height="wrap_content" 
-                    android:text="@string/playing_music"/>
-            </FrameLayout>
-        </LinearLayout>
-    </LinearLayout>
-</LinearLayout>
+	</LinearLayout>
+
+	<com.ty.actionspcbatest.TouchTestView 
+	    android:id="@+id/touch_test_view"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"/>
+</FrameLayout>
